commit al master del blogpost en su version mas reciente

--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,20 @@
 body {
-  text-align: center;
+  text-align: left;
   font-family: Arial, Helvetica, sans-serif;
-  color: darkred;
+  color: #333;
+  margin: 0;
+  padding: 0;
+  font-size: 16px;
+}
+
+#container {
+  width: 70%;
+  padding: 1em;
+  text-align: left;
+  border: 1px solid #ddd;
+  margin: 0 auto;
+}
+
+#container h1 {
+  font-size: 20px;
 }
