Finalizada la cabecera con diseño azul

--- a/styles.css
+++ b/styles.css
@@ -18,3 +18,18 @@ body {
 #container h1 {
   font-size: 20px;
 }
+
+#cabecera {
+  background: #33a;
+  box-shadow: 0px 5px 20px 0px rgba(0, 0, 0, 00.75);
+  color: white;
+  font-weight: bold;
+  margin: 0;
+  padding: 0.5em;
+}
+
+#cabecera #tagline {
+  padding: 0 0 0 1em;
+  font-weight: normal;
+  font-size: 0.8em;
+}
