--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 body {
   text-align: left;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Courier New", Courier, monospace, Helvetica, sans-serif;
   color: #333;
   margin: 0;
   padding: 0;
